Add sync to circle controller
Signed-off-by: Maycon Pacheco <mayconjrpacheco@gmail.com>

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1,3 +1,21 @@
 body {
+  background-color: #2c2c2e;
+}
+
+
+textarea:focus, 
+textarea.form-control:focus, 
+input.form-control:focus, 
+input[type=text]:focus, 
+input[type=password]:focus, 
+input[type=email]:focus, 
+input[type=number]:focus, 
+[type=text].form-control:focus, 
+[type=password].form-control:focus, 
+[type=email].form-control:focus, 
+[type=tel].form-control:focus, 
+[contenteditable].form-control:focus {
+  box-shadow: none;
   background-color: #1c1c1e;
+  color: #fff;
 }
