--- a/ui/src/modules/CircleDiagram/Sidebar/style.css
+++ b/ui/src/modules/CircleDiagram/Sidebar/style.css
@@ -1,8 +1,25 @@
-.sidebar {
+.circle_sidebar {
   background-color: black;
   position: absolute;
   top: 0;
   bottom: 0;
-  right: 0;
   width: 300px;
+  z-index: 99;
+  background: #2c2c2e;
+  color: #fff;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.circle_sidebar_input_readonly {
+  color: #fff !important;
+  background-color: #1c1c1e !important;
+  border: none !important;
+  box-shadow: none;
+}
+
+.circle_sidebar_input_edit {
+  color: #fff !important;
+  background-color: #1c1c1e !important;
+  box-shadow: 1px solid #fff;
 }
