--- a/ui/src/modules/Main/Navbar/style.scss
+++ b/ui/src/modules/Main/Navbar/style.scss
@@ -4,4 +4,15 @@
   display: flex;
   align-items: center;
   padding: 0 2rem 0 2rem;
+  background-color: #212121;
+  z-index: 99;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  justify-content: space-between;
+  color: #fff;
+
+  &__logo {
+    margin-right: 30px;
+  }
 }
