--- a/ui/src/modules/Main/Sidebar/style.scss
+++ b/ui/src/modules/Main/Sidebar/style.scss
@@ -2,7 +2,7 @@
   border-right: 1px solid #757575;
   width: 80px;
   box-sizing: border-box;
-  height: 100vh;
+  height: calc(100vh - 80px);
   
 
   &__logo {
