--- a/ui/src/modules/Circles/style.scss
+++ b/ui/src/modules/Circles/style.scss
@@ -3,7 +3,7 @@
 
   &__item {
     border: 1px solid #757575;
-    background-color: #424242;
+    background-color: transparent;
     color: #fff;
   }
 }
