Create page circle-create

--- a/ui/src/index.scss
+++ b/ui/src/index.scss
@@ -55,3 +55,14 @@ body {
     }
   }
 }
+
+.card {
+  border: none;
+
+  &-header {
+    background-color: #424242 ;
+  }
+  &-body {
+    background-color: #616161;
+  }
+}
