--- a/ui/src/modules/Circles/style.scss
+++ b/ui/src/modules/Circles/style.scss
@@ -1,5 +1,22 @@
 .circles {
-  padding: 2rem;
+  width: 100%;
+
+  &__navbar {
+    background-color: #424242 ;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    padding: .6rem;
+
+    &__controller {
+      display: flex;
+    }
+  }
+
+  &__content {
+
+  }
+
 
   &__item {
     border: 1px solid #757575;
