--- a/ui/src/modules/Main/Navbar/style.scss
+++ b/ui/src/modules/Main/Navbar/style.scss
@@ -6,7 +6,7 @@
   padding: 0 2rem 0 2rem;
   background-color: #212121;
   z-index: 99;
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
   justify-content: space-between;
