--- a/ui/src/modules/Main/style.scss
+++ b/ui/src/modules/Main/style.scss
@@ -5,5 +5,12 @@
     width: 100%;
     display: flex;
     margin-top: 80px;
+    
+
+    &__body {
+      margin-left: 80px;
+      width: 100%;
+    }
+    
   }
 }
