--- a/ui/src/modules/CircleModules/style.scss
+++ b/ui/src/modules/CircleModules/style.scss
@@ -19,6 +19,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #424242;
+    margin-bottom: .5rem;
 
       
     &--Progressing {
