--- a/ui/src/modules/Circles/style.scss
+++ b/ui/src/modules/Circles/style.scss
@@ -19,6 +19,7 @@
       border: 1px solid #757575;
       background-color: transparent;
       color: #fff;
+      height: 450px;
 
       .card-body {
         background-color: transparent;
