--- a/ui/src/modules/CirclesMain/Sidebar/style.scss
+++ b/ui/src/modules/CirclesMain/Sidebar/style.scss
@@ -1,10 +1,10 @@
-.main__sidebar {
+.circles__sidebar {
   border-right: 1px solid #757575;
-  width: 80px;
+  width: 300px;
   box-sizing: border-box;
   height: calc(100vh - 80px);
   position: fixed;
-  background: #1C1C1E;
+  background: #2C2C2E;
   
 
   &__logo {
@@ -18,13 +18,11 @@
 
   &__list {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    padding-top: 10px;
+    padding: 5px;
 
     &__item {
-      padding: 10px 13px 10px 13px;
+      padding: 10px;
       margin: 5px 0 5px 0;
       border-radius: 10px;
       color: #fff;
