--- a/ui/src/modules/Main/Navbar/style.scss
+++ b/ui/src/modules/Main/Navbar/style.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   padding: 0 2rem 0 2rem;
-  background-color: #212121;
+  background-color: #1C1C1E;
   z-index: 99;
   position: fixed;
   width: 100%;
