--- a/ui/src/modules/CirclesMain/Circle/style.scss
+++ b/ui/src/modules/CirclesMain/Circle/style.scss
@@ -2,13 +2,46 @@
   width: 600px;
   border-right: 1px solid #2C2C2E;
   display: inline-block;
-  padding: 30px;
+  overflow-y: auto;
+  
+
+  &__tabs {
+    background: #2C2C2E;
+    height: 40px;
+
+    &__item {
+      display: flex;
+      padding: 0 10px 0 10px;
+      width: 230px;
+      background: #3A3A3C;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      &__close {
+        cursor: pointer;
+      }
+    }
+  }
 
   &__content {
+    padding: 30px;
+
     &__title {
       font-weight: 700;
       font-size: 18px;
+      display: flex;
+      width: 100%;
+      align-items: center;
+    }
 
+    &__description {
+      font-weight: 700;
+      font-size: 18px;
+      display: flex;
+      width: 100%;
+      margin-top: 30px;
     }
 
     &__section {
@@ -20,5 +53,13 @@
         margin-bottom: 20px;
       }
     }
+
+    &__footer {
+      display: flex;
+      justify-content: center;
+      padding: 30px;
+    }
   }
+
+  
 }
