--- a/ui/src/modules/CirclesMain/Circle/style.scss
+++ b/ui/src/modules/CirclesMain/Circle/style.scss
@@ -14,10 +14,11 @@
     align-items: center;
 
     &__item {
+      cursor: pointer;
       display: flex;
       padding: 0 10px 0 10px;
-      width: 230px;
-      background: #3A3A3C;
+      width: 210px;
+      background: #2C2C2E;
       height: 40px;
       display: flex;
       align-items: center;
@@ -26,7 +27,40 @@
       &__close {
         cursor: pointer;
       }
+
+      &--active {
+        @extend .circle__tabs__item;
+        background: #3A3A3C;
+      }
     }
+
+    &__options {
+      display: flex;
+      align-items: center;
+      &__item {
+        cursor: pointer;
+        display: flex;
+        padding: 0 10px 0 10px;
+        max-width: 230px;
+        background: #2C2C2E;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+  
+        &__close {
+          cursor: pointer;
+        }
+  
+        &--active {
+          @extend .circle__tabs__options__item;
+          background: #3A3A3C;
+        }
+      }
+    }
+    
+
+    
   }
 
   &__content {
