--- a/ui/src/core/components/ViewInput/style.scss
+++ b/ui/src/core/components/ViewInput/style.scss
@@ -1,3 +1,28 @@
 .view-input{
   width: 100%;
+
+  &__label {
+    font-weight: 700;
+    font-size: 18px;
+    display: flex;
+    width: 100%;
+    align-items: center;
+
+    span {
+      margin-left: 1rem;
+    }
+
+    
+  }
+
+  &__input {
+    background: #2C2C2E;
+    color: #F2F2F9;
+    margin-left: 30px;
+  }
+
+  .form-control-plaintext {
+    background: #2C2C2E;
+    color: #F2F2F9;
+  }
 }
