--- a/ui/src/modules/ModulesMain/Module/style.scss
+++ b/ui/src/modules/ModulesMain/Module/style.scss
@@ -1,4 +1,4 @@
-.circle {
+.module {
   width: 600px;
   border-right: 1px solid #2C2C2E;
   display: inline-block;
@@ -29,7 +29,7 @@
       }
 
       &--active {
-        @extend .circle__tabs__item;
+        @extend .module__tabs__item;
         background: #3A3A3C;
       }
     }
@@ -53,7 +53,7 @@
         }
   
         &--active {
-          @extend .circle__tabs__options__item;
+          @extend .module__tabs__options__item;
           background: #3A3A3C;
         }
       }
@@ -65,8 +65,6 @@
 
   &__content {
     padding: 30px;
-
-
 
     &__section {
       margin-top: 30px;
