--- a/ui/src/modules/CirclesMain/Circle/style.scss
+++ b/ui/src/modules/CirclesMain/Circle/style.scss
@@ -37,6 +37,7 @@
     &__options {
       display: flex;
       align-items: center;
+
       &__item {
         cursor: pointer;
         display: flex;
@@ -66,20 +67,26 @@
   &__content {
     padding: 30px;
 
-
-
     &__section {
       margin-top: 30px;
     }
-  }
 
-  &__save {
-    display: flex;
-    justify-content: end;
-    padding: 5px 30px 5px 5px;
-    z-index: 10;
-    cursor: pointer;
-  }
+    &__save {
+      display: flex;
+      justify-content: end;
+      padding: 5px 30px 5px 5px;
+      z-index: 10;
+      position: absolute;
+      bottom: 40px;
+      right: 5px;
+      cursor: pointer;
 
-  
+      &__btn {
+        background-color: #3A3A3C;
+        padding: 10px;
+        border-radius: 20px;
+        position: fixed;
+      }
+    }
+  }  
 }
