--- a/ui/src/core/components/Navbar/style.scss
+++ b/ui/src/core/components/Navbar/style.scss
@@ -1,18 +1,19 @@
-.main__navbar {
+.navbar {
   height: 80px;
   border-bottom: 1px solid #757575;
-  display: flex;
-  align-items: center;
-  padding: 0 2rem 0 2rem;
+  display: flex !important;
+  align-items: center !important;
+  padding: 0 2rem 0 2rem !important;
   background-color: #1C1C1E;
   z-index: 99;
   position: fixed;
   width: 100%;
   top: 0;
-  justify-content: space-between;
+  justify-content: space-between !important;
   color: #fff;
 
   &__logo {
     margin-right: 30px;
+    cursor: pointer;
   }
 }
