Change primary color

--- a/ui/src/core/components/FloatingButton/style.scss
+++ b/ui/src/core/components/FloatingButton/style.scss
@@ -9,7 +9,7 @@
   cursor: pointer;
 
   &__btn {
-    background-color: #3A3A3C;
+    background-color: #5C37CC;
     padding: 10px;
     border-radius: 20px;
     position: fixed;
