--- a/ui/src/modules/Main/Sidebar/style.scss
+++ b/ui/src/modules/Main/Sidebar/style.scss
@@ -34,7 +34,7 @@
         margin: 5px 0 5px 0;
         border-radius: 10px;
         color: #fff;
-        background-color: #f15c23;
+        background-color: #5C37CC;
 
         &:hover {
           color: #fff;
