Create dynamic component

--- a/ui/src/modules/CirclesMain/style.scss
+++ b/ui/src/modules/CirclesMain/style.scss
@@ -20,6 +20,12 @@
     height: calc(100vh - 100px);
   }
 
+  &__content-empty {
+    margin-left: 300px;
+    display: flex;
+    height: calc(100vh - 100px);
+  }
+
 
   
 }
