Start fetch data refactor

--- a/ui/src/core/components/Navbar/style.scss
+++ b/ui/src/core/components/Navbar/style.scss
@@ -16,4 +16,12 @@
     margin-right: 30px;
     cursor: pointer;
   }
+
+  .breadcrumb-item {
+    font-size: 20px;
+
+    a {
+      text-decoration: none;
+    }
+  }
 }
