Change bootstrap scss style

--- a/ui/src/core/components/Navbar/style.scss
+++ b/ui/src/core/components/Navbar/style.scss
@@ -1,10 +1,9 @@
 .navbar {
   height: 80px;
-  border-bottom: 1px solid #757575;
   display: flex !important;
   align-items: center !important;
   padding: 0 2rem 0 2rem !important;
-  background-color: #1C1C1E;
+  background-color: transparent;
   z-index: 99;
   position: fixed;
   width: 100%;
