--- a/ui/src/modules/CirclesMain/style.scss
+++ b/ui/src/modules/CirclesMain/style.scss
@@ -17,7 +17,7 @@
   &__content {
     margin-left: 300px;
     display: inline-flex;
-    height: calc(100vh - 100px);
+    height: 100vh;
   }
 
   &__content-empty {
