--- a/ui/src/modules/Main/Sidebar/style.scss
+++ b/ui/src/modules/Main/Sidebar/style.scss
@@ -1,14 +1,11 @@
 .main__sidebar {
-  border-right: 1px solid #757575;
   width: 80px;
   box-sizing: border-box;
-  height: calc(100vh - 80px);
+  height: 100vh;
   position: fixed;
   background: #1C1C1E;
   
-
   &__logo {
-    border-bottom: 1px solid #757575;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,28 +21,26 @@
     padding-top: 10px;
 
     &__item {
-      padding: 10px 13px 10px 13px;
-      margin: 5px 0 5px 0;
-      border-radius: 10px;
-      color: #fff;
+      display: flex;
+      justify-content: center;
+      padding: 16px 13px 16px 13px;
+      font-size: 16px;
+      width: 100%;
 
       &--active {
-        padding: 10px 13px 10px 13px;
-        margin: 5px 0 5px 0;
-        border-radius: 10px;
-        color: #fff;
-        background-color: #5C37CC;
+        @extend .main__sidebar__list__item;
+        background-color: #2C2C2E;
 
         &:hover {
           color: #fff;
         }
-
-
       }
+
+
 
       &:hover {
         color: #fff;
-        background-color: #757575;
+        background-color: #2C2C2E;
       }
 
     }
