--- a/ui/src/core/style/custom.scss
+++ b/ui/src/core/style/custom.scss
@@ -27,5 +27,10 @@ $input-transition: none;
 $input-focus-border-color: transparent;
 $input-focus-box-shadow: none;
 $input-color: $text-color;
+$input-plaintext-color: $text-color;
+
+$nav-link-color: $text-color;
+$nav-pills-border-radius: 4px;
+$nav-pills-link-active-bg: $primary-color;
 
 @import "~bootstrap/scss/bootstrap";
