--- a/ui/src/modules/CircleModules/style.scss
+++ b/ui/src/modules/CircleModules/style.scss
@@ -1,3 +1,5 @@
+@import "../../core/style/colors.scss";
+
 .circle-modules {
   padding-top: 5px;
   border: 1px solid #757575;
@@ -14,7 +16,7 @@
   &__item {
     padding: .8rem;
     height: 50px;
-    border-radius: 10px;
+    border-radius: 4px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -24,17 +26,17 @@
       
     &--Progressing {
       @extend .circle-modules__item;
-      border-left: 15px solid #1e88e5;
+      background-color: $info-color;
     }
 
     &--Healthy {
       @extend .circle-modules__item;
-      border-left: 15px solid #43a047;
+      background-color: $success-color;
     }
 
     &--FAILED {
       @extend .circle-modules__item;
-      border-left: 15px solid #e53935;
+      background-color: $danger-color;
     }
 
     &__menu {
