--- a/ui/src/modules/CircleModules/style.scss
+++ b/ui/src/modules/CircleModules/style.scss
@@ -15,13 +15,19 @@
 
   &__item {
     padding: .8rem;
-    height: 50px;
     border-radius: 4px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background-color: #424242;
     margin-bottom: .5rem;
+
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    &__status {
+
+    }
 
       
     &--Progressing {
@@ -34,7 +40,7 @@
       background-color: $success-color;
     }
 
-    &--FAILED {
+    &--Degraded {
       @extend .circle-modules__item;
       background-color: $danger-color;
     }
@@ -50,8 +56,6 @@
         color: #fff;
       }
     }
-
-    
   }
 
   &__btn-add {
