--- a/ui/src/core/style/custom.scss
+++ b/ui/src/core/style/custom.scss
@@ -33,4 +33,8 @@ $nav-link-color: $text-color;
 $nav-pills-border-radius: 4px;
 $nav-pills-link-active-bg: $primary-color;
 
+$list-group-bg: $first-grey;
+$list-group-border-color: $text-color;
+$list-group-color: $text-color;
+
 @import "~bootstrap/scss/bootstrap";
