--- a/ui/src/modules/CircleModules/style.scss
+++ b/ui/src/modules/CircleModules/style.scss
@@ -11,6 +11,8 @@
     font-size: 18px;
     border-bottom: 1px solid #757575;
     margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
   }
 
   &__item {
@@ -18,6 +20,7 @@
     border-radius: 4px;
     background-color: #424242;
     margin-bottom: .5rem;
+    background-color: $second-grey;
 
     &__header {
       display: flex;
