change metrics range visualization

--- a/ui/src/modules/CircleViewer/Metrics/style.scss
+++ b/ui/src/modules/CircleViewer/Metrics/style.scss
@@ -1,7 +1,13 @@
+@import "../../../core/style/colors.scss";
+
 .circle-metrics {
 
   &__base {
     height: 300px;
+  }
+
+  &__tooltip {
+    background-color: $second-grey;
   }
 
 }
